fix start filters fix collapsing, add save button

--- a/src/www/less/site.less
+++ b/src/www/less/site.less
@@ -116,6 +116,9 @@ input.form-control {
     flex-flow: row wrap;
 }
 
+.saved-cards {
+    .save-btn {display: none;}
+}
 
 .card {
     padding: 2px;
